--- a/On The Map/Base.lproj/Main.storyboard
+++ b/On The Map/Base.lproj/Main.storyboard
@@ -2,7 +2,13 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="Roboto-Regular.ttf">
+            <string>Roboto-Regular</string>
+        </mutableArray>
+    </customFonts>
     <scenes>
         <!--Login View Controller-->
         <scene sceneID="ufC-wZ-h7g">
@@ -15,11 +21,65 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="udacity" translatesAutoresizingMaskIntoConstraints="NO" id="BDh-LT-ivI">
+                                <rect key="frame" x="250" y="70" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="7sM-S9-Fgc"/>
+                                    <constraint firstAttribute="width" constant="100" id="z3q-rz-2f9"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Login to Udacity" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RbR-Mj-Ska">
+                                <rect key="frame" x="226" y="178" width="146.5" height="23.5"/>
+                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="20"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KhM-ve-Hlz">
+                                <rect key="frame" x="16" y="223.5" width="568" height="44"/>
+                                <color key="backgroundColor" red="0.97647058823529409" green="0.72156862745098038" blue="0.51372549019607838" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="rkP-zD-6MI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cbr-0D-uZB">
+                                <rect key="frame" x="16" y="278" width="568" height="44"/>
+                                <color key="backgroundColor" red="0.97647058819999999" green="0.72156862749999995" blue="0.51372549020000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="0EY-jo-SmK"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" red="0.98039215686274506" green="0.49803921568627452" blue="0.12549019607843137" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="KhM-ve-Hlz" firstAttribute="leading" secondItem="cbr-0D-uZB" secondAttribute="leading" id="1C2-5V-ok5"/>
+                            <constraint firstAttribute="centerX" secondItem="KhM-ve-Hlz" secondAttribute="centerX" constant="-52.5" id="2Z7-vk-x4x"/>
+                            <constraint firstItem="KhM-ve-Hlz" firstAttribute="top" secondItem="RbR-Mj-Ska" secondAttribute="bottom" constant="15" id="4bZ-hh-gKF"/>
+                            <constraint firstItem="KhM-ve-Hlz" firstAttribute="trailing" secondItem="cbr-0D-uZB" secondAttribute="trailing" id="ENg-5F-hTK"/>
+                            <constraint firstItem="RbR-Mj-Ska" firstAttribute="top" secondItem="BDh-LT-ivI" secondAttribute="bottom" constant="15" id="ICd-yH-Rbn"/>
+                            <constraint firstItem="KhM-ve-Hlz" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="OUP-9G-i8a"/>
+                            <constraint firstItem="cbr-0D-uZB" firstAttribute="top" secondItem="KhM-ve-Hlz" secondAttribute="bottom" constant="10.5" id="PD4-BB-o6C"/>
+                            <constraint firstAttribute="centerX" secondItem="BDh-LT-ivI" secondAttribute="centerX" id="WGz-M4-OPg"/>
+                            <constraint firstAttribute="centerX" secondItem="RbR-Mj-Ska" secondAttribute="centerX" id="dp8-LN-Y19"/>
+                            <constraint firstItem="KhM-ve-Hlz" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="vLy-WQ-SZb"/>
+                            <constraint firstItem="BDh-LT-ivI" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="50" id="zGB-Gj-Aqq"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="2Z7-vk-x4x"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="udacity" width="256" height="256"/>
+    </resources>
 </document>
