--- a/On The Map/Base.lproj/Main.storyboard
+++ b/On The Map/Base.lproj/Main.storyboard
@@ -56,23 +56,17 @@
                         </subviews>
                         <color key="backgroundColor" red="0.98039215686274506" green="0.49803921568627452" blue="0.12549019607843137" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="KhM-ve-Hlz" firstAttribute="leading" secondItem="cbr-0D-uZB" secondAttribute="leading" id="1C2-5V-ok5"/>
-                            <constraint firstAttribute="centerX" secondItem="KhM-ve-Hlz" secondAttribute="centerX" constant="-52.5" id="2Z7-vk-x4x"/>
                             <constraint firstItem="KhM-ve-Hlz" firstAttribute="top" secondItem="RbR-Mj-Ska" secondAttribute="bottom" constant="15" id="4bZ-hh-gKF"/>
-                            <constraint firstItem="KhM-ve-Hlz" firstAttribute="trailing" secondItem="cbr-0D-uZB" secondAttribute="trailing" id="ENg-5F-hTK"/>
                             <constraint firstItem="RbR-Mj-Ska" firstAttribute="top" secondItem="BDh-LT-ivI" secondAttribute="bottom" constant="15" id="ICd-yH-Rbn"/>
                             <constraint firstItem="KhM-ve-Hlz" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="OUP-9G-i8a"/>
                             <constraint firstItem="cbr-0D-uZB" firstAttribute="top" secondItem="KhM-ve-Hlz" secondAttribute="bottom" constant="10.5" id="PD4-BB-o6C"/>
                             <constraint firstAttribute="centerX" secondItem="BDh-LT-ivI" secondAttribute="centerX" id="WGz-M4-OPg"/>
+                            <constraint firstItem="cbr-0D-uZB" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="aRZ-Fg-jPu"/>
                             <constraint firstAttribute="centerX" secondItem="RbR-Mj-Ska" secondAttribute="centerX" id="dp8-LN-Y19"/>
+                            <constraint firstItem="cbr-0D-uZB" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="gXa-SB-YPU"/>
                             <constraint firstItem="KhM-ve-Hlz" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="vLy-WQ-SZb"/>
                             <constraint firstItem="BDh-LT-ivI" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="50" id="zGB-Gj-Aqq"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="2Z7-vk-x4x"/>
-                            </mask>
-                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
