--- a/On The Map/Base.lproj/Main.storyboard
+++ b/On The Map/Base.lproj/Main.storyboard
@@ -4,11 +4,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <mutableArray key="Roboto-Regular.ttf">
-            <string>Roboto-Regular</string>
-        </mutableArray>
-    </customFonts>
     <scenes>
         <!--Login View Controller-->
         <scene sceneID="ufC-wZ-h7g">
@@ -22,21 +17,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="udacity" translatesAutoresizingMaskIntoConstraints="NO" id="BDh-LT-ivI">
-                                <rect key="frame" x="250" y="70" width="100" height="100"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="7sM-S9-Fgc"/>
-                                    <constraint firstAttribute="width" constant="100" id="z3q-rz-2f9"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Login to Udacity" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RbR-Mj-Ska">
-                                <rect key="frame" x="226" y="178" width="146.5" height="23.5"/>
-                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="20"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login to Udacity" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RbR-Mj-Ska">
+                                <rect key="frame" x="221" y="185" width="158.5" height="26.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KhM-ve-Hlz">
-                                <rect key="frame" x="16" y="223.5" width="568" height="44"/>
+                                <rect key="frame" x="16" y="228.5" width="568" height="44"/>
                                 <color key="backgroundColor" red="0.97647058823529409" green="0.72156862745098038" blue="0.51372549019607838" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="rkP-zD-6MI"/>
@@ -45,7 +33,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cbr-0D-uZB">
-                                <rect key="frame" x="16" y="278" width="568" height="44"/>
+                                <rect key="frame" x="16" y="282.5" width="568" height="44"/>
                                 <color key="backgroundColor" red="0.97647058819999999" green="0.72156862749999995" blue="0.51372549020000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="0EY-jo-SmK"/>
@@ -53,17 +41,46 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ypo-Xj-0CP">
+                                <rect key="frame" x="16" y="336.5" width="568" height="44"/>
+                                <color key="backgroundColor" red="0.92549019607843142" green="0.3529411764705882" blue="0.082352941176470587" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="XHc-hi-L7l"/>
+                                </constraints>
+                                <state key="normal" title="Login"/>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="udacity" translatesAutoresizingMaskIntoConstraints="NO" id="BDh-LT-ivI">
+                                <rect key="frame" x="250" y="70" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="7sM-S9-Fgc"/>
+                                    <constraint firstAttribute="width" constant="100" id="z3q-rz-2f9"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a3Q-al-yVK">
+                                <rect key="frame" x="16" y="395.5" width="568" height="34"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
+                                <state key="normal" title="Don't have an account? Sign Up">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.98039215686274506" green="0.49803921568627452" blue="0.12549019607843137" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.98039215686274506" green="0.54117647058823526" blue="0.12549019607843137" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="KhM-ve-Hlz" firstAttribute="top" secondItem="RbR-Mj-Ska" secondAttribute="bottom" constant="15" id="4bZ-hh-gKF"/>
+                            <constraint firstItem="ypo-Xj-0CP" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="4QA-gW-aUp"/>
+                            <constraint firstItem="KhM-ve-Hlz" firstAttribute="top" secondItem="RbR-Mj-Ska" secondAttribute="bottom" constant="17" id="4bZ-hh-gKF"/>
+                            <constraint firstItem="a3Q-al-yVK" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="Ahl-3O-xWz"/>
+                            <constraint firstItem="a3Q-al-yVK" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="HeE-kY-xnW"/>
                             <constraint firstItem="RbR-Mj-Ska" firstAttribute="top" secondItem="BDh-LT-ivI" secondAttribute="bottom" constant="15" id="ICd-yH-Rbn"/>
+                            <constraint firstItem="ypo-Xj-0CP" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="Jcj-vx-ezn"/>
                             <constraint firstItem="KhM-ve-Hlz" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="OUP-9G-i8a"/>
-                            <constraint firstItem="cbr-0D-uZB" firstAttribute="top" secondItem="KhM-ve-Hlz" secondAttribute="bottom" constant="10.5" id="PD4-BB-o6C"/>
+                            <constraint firstItem="cbr-0D-uZB" firstAttribute="top" secondItem="KhM-ve-Hlz" secondAttribute="bottom" constant="10" id="PD4-BB-o6C"/>
+                            <constraint firstItem="a3Q-al-yVK" firstAttribute="top" secondItem="ypo-Xj-0CP" secondAttribute="bottom" constant="15" id="Rfo-zE-t29"/>
                             <constraint firstAttribute="centerX" secondItem="BDh-LT-ivI" secondAttribute="centerX" id="WGz-M4-OPg"/>
                             <constraint firstItem="cbr-0D-uZB" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="aRZ-Fg-jPu"/>
                             <constraint firstAttribute="centerX" secondItem="RbR-Mj-Ska" secondAttribute="centerX" id="dp8-LN-Y19"/>
                             <constraint firstItem="cbr-0D-uZB" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="gXa-SB-YPU"/>
+                            <constraint firstItem="ypo-Xj-0CP" firstAttribute="top" secondItem="cbr-0D-uZB" secondAttribute="bottom" constant="10" id="thq-fq-23C"/>
                             <constraint firstItem="KhM-ve-Hlz" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="vLy-WQ-SZb"/>
                             <constraint firstItem="BDh-LT-ivI" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="50" id="zGB-Gj-Aqq"/>
                         </constraints>
