--- a/On The Map/Base.lproj/Main.storyboard
+++ b/On The Map/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Ogo-2W-0wD">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -105,13 +105,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="273" y="426"/>
+            <point key="canvasLocation" x="255" y="426"/>
         </scene>
-        <!--Student Locations Tabbed Bar-->
+        <!--Students Locations Tabbed Bar-->
         <scene sceneID="xle-52-EfA">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ake-1K-uOm" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tabBarController id="Ogo-2W-0wD" userLabel="Student Locations Tabbed Bar" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="StudentsLocationsTabbedBar" id="Ogo-2W-0wD" userLabel="Students Locations Tabbed Bar" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="rQg-eq-FEL"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="ztM-Ac-mer">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
@@ -124,6 +124,7 @@
                         <segue destination="hbg-Kf-T2i" kind="relationship" relationship="viewControllers" id="PMA-ux-jpj"/>
                     </connections>
                 </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ake-1K-uOm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="984" y="426"/>
         </scene>
@@ -158,7 +159,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="On The Map" id="36f-7M-O5g">
-                        <barButtonItem key="leftBarButtonItem" title="Logout" id="IPf-3f-heI"/>
+                        <barButtonItem key="leftBarButtonItem" title="Logout" id="IPf-3f-heI">
+                            <connections>
+                                <action selector="logoutButton:" destination="m3E-Mw-SjK" id="DcY-qX-J2S"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AUl-DA-MY1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -196,7 +201,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="On The Map" id="tF8-te-bzI">
-                        <barButtonItem key="leftBarButtonItem" title="Logout" id="ocd-tQ-wHd"/>
+                        <barButtonItem key="leftBarButtonItem" title="Logout" id="ocd-tQ-wHd">
+                            <connections>
+                                <action selector="logoutButton:" destination="HxA-w2-PBT" id="t2K-H9-Y6h"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kV1-ss-I07" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -234,7 +243,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="On The Map" id="ta8-lQ-efC">
-                        <barButtonItem key="leftBarButtonItem" title="Logout" id="iCC-TI-W5l"/>
+                        <barButtonItem key="leftBarButtonItem" title="Logout" id="iCC-TI-W5l">
+                            <connections>
+                                <action selector="logoutButton:" destination="eOG-ud-NE2" id="2u9-sK-jIg"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OFp-GP-WjB" userLabel="First Responder" sceneMemberID="firstResponder"/>
